NATTQA-ENV/force-app/main/default/objects/CONTAINER_Work_Order__c/CONTAINER_Work_Order__c.object-meta.xml
<CustomObject>
    <label>Work Order</label>
    <nameField>
        <label>Work No (AWO)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>