NATTQA-ENV/force-app/main/default/objects/CONTAINER_Work_Order__c/fields/CONTAINER_AWO_DocSign__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_AWO_DocSign__c</fullName>
    <description>This field is to Capture CONTAINER Work order Work No.</description>
    <label>AWO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>