NATTQA-ENV/force-app/main/default/objects/CONTAINER_Work_Order__c/fields/CONTAINER_AWO_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_AWO_Number__c</fullName>
    <label>AWO Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>