NATTQA-ENV/force-app/main/default/objects/CONTAINER_Work_Order__c/fields/CONTAINER_Commissioning__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commissioning__c</fullName>
    <description>Master Detail relationship between Work Order and commissioning</description>
    <label>Commissioning</label>
    <referenceTo>CONTAINER_Commissionig__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>