NATTQA-ENV/force-app/main/default/objects/CONTAINER_Work_Order__c/fields/CONTAINER_Commissioning_Contact__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commissioning_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commissioning Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>