NATTQA-ENV/force-app/main/default/objects/CONTAINER_Work_Order__c/fields/CONTAINER_Date_Issued__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Date_Issued__c</fullName>
    <description>This field is created to capture the date issued.</description>
    <label>Date Issued</label>
    <type>Date</type>
</CustomField>