NATTQA-ENV/force-app/main/default/objects/CONTAINER_Work_Order__c/fields/CONTAINER_Fixed_Rate_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Fixed_Rate_Per_Unit__c</fullName>
    <description>This field is created to capture the currency.</description>
    <label>Fixed Rate Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>