NATTQA-ENV/force-app/main/default/objects/CONTAINER_Work_Order__c/fields/CONTAINER_Freight_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Freight_Number__c</fullName>
    <description>This field is created to capture the freight number.</description>
    <label>Freight Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>