NATTQA-ENV/force-app/main/default/objects/CONTAINER_Work_Order__c/fields/CONTAINER_Parent_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Parent_Account_Name__c</fullName>
    <formula>CONTAINER_Commissioning__r.CONTAINER_Account__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Name</label>
    <type>Text</type>
</CustomField>