NATTQA-ENV/force-app/main/default/objects/CONTAINER_Work_Order__c/fields/CONTAINER_Parts_Ship__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Parts_Ship__c</fullName>
    <description>This field is created to capture the parts ship.</description>
    <label>Parts Ship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>