NATTQA-ENV/force-app/main/default/objects/CONTAINER_Work_Order__c/fields/CONTAINER_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Quantity__c</fullName>
    <description>This Field is created to capture the Quantity.</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>