NATTQA-ENV/force-app/main/default/objects/CONTAINER_Work_Order__c/fields/CONTAINER_Ship_Short__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Ship_Short__c</fullName>
    <description>Field for CONTAINER Users.</description>
    <label>Ship Short</label>
    <length>255</length>
    <type>Text</type>
</CustomField>