NATTQA-ENV/force-app/main/default/objects/CONTAINER_Work_Order__c/fields/CONTAINER_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Total_Price__c</fullName>
    <description>This field is created to capture the total price.</description>
    <formula>CONTAINER_Fixed_Rate_Per_Unit__c  *   CONTAINER_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>