NATTQA-ENV/force-app/main/default/objects/CONTAINER_Work_Order__c/fields/CONTAINER_WO_Invoice_Record__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_WO_Invoice_Record__c</fullName>
    <description>This field will populate WO invoice record.</description>
    <label>WO Invoice Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>