NATTQA-ENV/force-app/main/default/objects/CONTAINER_Work_Order__c/fields/CONTAINER_Work_No_AWO__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Work_No_AWO__c</fullName>
    <description>This field is to Capture CONTAINER Work order Work No.</description>
    <label>Work No (AWO)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>